--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,7 +4,7 @@ FROM ghcr.io/mysociety/data_common:sha-d6eabdb
 # Override the .pth created at previous stages to point to where the working directory will land
 COPY pyproject.toml poetry.loc[k] /setup/ 
 COPY src/data_common/pyproject.toml src/data_common/poetry.loc[k] /setup/src/data_common/
-ENV WORKSPACE_NAME publicwhip-data
+ENV WORKSPACE_NAME publicwhip_data
 RUN mkdir /setup/src/$WORKSPACE_NAME \
     && touch /setup/src/$WORKSPACE_NAME/__init__.py \
     && mkdir --parents /setup/src/data_common/src/data_common \
